# finsight-deep

./: .env.production  .env.template  .gitattributes  .gitignore  README.md  aiq.code-workspace  coverage.json  pyproject.toml  pytest.ini  simple_api_stable.py
benchmarks/: README.md  gpu_performance.py  standard_benchmarks.py
ci/: README.md
config/: security.json
deployment/: README.md
docker/: Dockerfile.cpu  Dockerfile.digital_human  Dockerfile.digital_human_production  Dockerfile.distributed_manager  Dockerfile.distributed_worker  Dockerfile.gpu  Dockerfile.manager-nvidia  Dockerfile.nvidia-test  Dockerfile.simple  Dockerfile.worker-nvidia  README.md  docker-compose-nvidia-test.yml  docker-compose.digital_human.yml  docker-compose.hackathon.yml  docker-compose.nvidia.yml  docker-compose.production.yml  docker-compose.yml  run_docker.sh
docs/: ARCHITECTURE_DIAGRAM.txt  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_SUMMARY.md  README.md
documentation/: README.md
examples/: hackathon_demo.py
examples/federated_learning/: README.md  client.py  pyproject.toml  run_demo.sh  server.py
examples/federated_learning/configs/: edge_client.yml  edge_mobile.yml  federated_server.yml
helm/: README.md
kubernetes/: README.md  digital-human-deployment.yaml
requirements/: README.md  requirements-distributed.txt  simple_api_requirements.txt
scripts/: deploy_consensus_contracts.py  deploy_digital_human.sh  deploy_distributed_production.sh  deploy_nvidia_cloud.py  deploy_nvidia_distributed.sh  deploy_nvidia_production.py  deploy_production.sh  hackathon_quickstart.sh  (+10 more)
(+442 files in other folders)
